Avoid overflow from used items.

--- a/scss/game.scss
+++ b/scss/game.scss
@@ -322,7 +322,7 @@ a, a:visited {
 }
 
 #used-items {
-  align-items: flex-start;
+  align-items: center;
   flex-grow: 1;
   flex-wrap: wrap;
   padding: .5rem;
